--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -47,6 +47,9 @@
       <HintPath>G:\repos\_lib2\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="COM3D2.API">
+      <HintPath>..\..\_lib2\COM3D2.API.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
@@ -54,6 +57,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -64,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyGUI.cs" />
     <Compile Include="MyLog.cs" />
     <Compile Include="MyUtill.cs" />
     <Compile Include="MyWindowRect.cs" />
