--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -75,6 +75,8 @@
     <Compile Include="MyLog.cs" />
     <Compile Include="MyUtill.cs" />
     <Compile Include="MyWindowRect.cs" />
+    <Compile Include="PersonalUtill.cs" />
+    <Compile Include="PresetUtill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
