버전 출력 추가.

--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -29,6 +29,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\COM3D2.LillyUtill.xml</DocumentationFile>
+    <NoWarn>1591,1572,1571,1573,1587,1570</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
@@ -98,6 +100,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)*.dll" "C:\Downloads\plugin"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)*.dll" "C:\Downloads\plugin"
+copy "$(TargetDir)*.xml" "C:\Downloads\plugin"</PostBuildEvent>
   </PropertyGroup>
 </Project>
