--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -101,6 +101,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetDir)*.dll" "C:\Downloads\plugin"
-copy "$(TargetDir)*.xml" "C:\Downloads\plugin"</PostBuildEvent>
+copy "$(TargetDir)*.xml" "C:\Downloads\plugin"
+copy "$(TargetDir)*.dll" "F:\COM3D2\BepInEx\plugins"
+copy "$(TargetDir)*.xml" "F:\COM3D2\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
