--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="LillyUtill.cs" />
     <Compile Include="MaidActivePatch.cs" />
+    <Compile Include="MaidActivePatch2.cs" />
     <Compile Include="MyGUI.cs" />
     <Compile Include="MyLog.cs" />
     <Compile Include="MyUtill.cs" />
@@ -99,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\sample.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sample1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
