--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -73,6 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigEntryUtill.cs" />
     <Compile Include="LillyUtill.cs" />
     <Compile Include="MaidActivePatch.cs" />
     <Compile Include="MaidActivePatch2.cs" />
@@ -109,6 +110,7 @@
     <PostBuildEvent>copy "$(TargetDir)*.dll" "C:\Downloads\plugin"
 copy "$(TargetDir)*.xml" "C:\Downloads\plugin"
 copy "$(TargetDir)*.dll" "F:\COM3D2\BepInEx\plugins"
-copy "$(TargetDir)*.xml" "F:\COM3D2\BepInEx\plugins"</PostBuildEvent>
+copy "$(TargetDir)*.xml" "F:\COM3D2\BepInEx\plugins"
+copy "$(TargetDir)*.dll" "F:\COM3D2-test\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
