--- a/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
+++ b/COM3D2.LillyUtill/COM3D2.LillyUtill.csproj
@@ -130,18 +130,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\sample.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sample1.png" />
+    <None Include="Resources\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)*.dll" "C:\Downloads\plugin"
-copy "$(TargetDir)*.xml" "C:\Downloads\plugin"
-copy "$(TargetDir)*.dll" "h:\COM3D2\BepInEx\plugins"
-copy "$(TargetDir)*.xml" "h:\COM3D2\BepInEx\plugins"
-copy "$(TargetDir)*.dll" "h:\COM3D2-test\BepInEx\plugins"</PostBuildEvent>
+    <PostBuildEvent>copy "$(targetpath)" "h:\COM3D2\BepInEx\plugins" 
+copy "$(targetpath)" "h:\COM3D2-test\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\BepInEx.Core.5.4.17\build\BepInEx.Core.targets" Condition="Exists('..\packages\BepInEx.Core.5.4.17\build\BepInEx.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
